--- a/scripts/parameters.yml
+++ b/scripts/parameters.yml
@@ -4,6 +4,7 @@ contract:
   fctConsumeEnergy:  '298d65a1'
   fctSetProduction:  '567cc2b6'
   fctBuyEnergy: '36fd7e1b'
+  node: 'localhost'
 pine1:
   address: '0x520f9b737b97a52945075dbf393d29adca000cca'
   url: 'http://192.168.0.40:8080'
@@ -11,6 +12,7 @@ pine1:
   login: 'debian'
   password: 'debian'
   limit: 1000
+  relay: 0
 pine2:
   address: '0x98181b49bf309364fba5d75ff57d30509b2a24fd'
   url: 'http://192.168.0.29:8080'
@@ -18,6 +20,7 @@ pine2:
   login: 'debian'
   password: 'debian'
   limit: 1000
+  relay : 4
 pine3:
   address: '0x8915cf74dff23cbca59f356317098d4cf3d47203'
   url: 'http://192.168.0.xx:8080'
@@ -25,5 +28,8 @@ pine3:
   login: 'debian'
   password: 'debian'
   limit: 1000
+  relay : 3
 usedPine:
   id:  'pine1'
+relay:
+  serial: '/dev/ttyACM2'
